fix: integrate dark mode switcher
The dark mode switcher was originally adapted for tailwind. This change
makes it work with regular css.

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -15,6 +15,18 @@
 	--box-shadow: 0 2px 6px rgba(var(--gray), 25%), 0 8px 24px rgba(var(--gray), 33%),
 		0 16px 32px rgba(var(--gray), 33%);
 	--header-text-color: rgb(107, 114, 128);
+
+    --color-sitebg: rgb(229, 231, 235);
+    --color-text: rgb(0, 0, 0);
+	--light-display: inline;
+	--dark-display: none;
+
+    &.dark {
+      --color-sitebg: rgb(55, 65, 81);
+      --color-text: rgb(209, 213, 219);
+	  --light-display: none;
+	  --dark-display: inline;
+    }
 }
 @font-face {
 	font-family: 'Atkinson';
